--- a/_includes/maintemplate.njk
+++ b/_includes/maintemplate.njk
@@ -11,9 +11,9 @@
     <link rel="stylesheet" href="/css/style.css">
 </head>
 <body>
-    <section class="sub-header">
+    <section class="header">
         <nav>
-            <a href="index.html"><img src="/images/nk creative.png"></a>
+            <a href="index.html"><img src="images/nk creative.png"></a>
             <div class="nav-links" id="navlinks">
                 <i class="fa-solid fa-xmark fa-lg" style="color: #000000;" onclick="hideMenu()"></i>
                 <ul>
@@ -25,34 +25,12 @@
                 </ul>
             </div>
             <i class="fa-solid fa-bars" style="color: black;" onclick="showMenu()"></i>
+            
         </nav>
-        <h1>Portfolio</h1>
-    </section>
 
-    <section class="Portfolio">
-     <div class="container">
-        <div class="galerry">
-            <div class="column">
-                <div class="photo">
-                   <img src="/images/Julia.jpg">
-                   <img src="/images/Julia2.jpg">
-                   <img src="/images/Bibiana1.JPG">
-                   <img src="/images/Patricie1.JPG">
-                   <img src="/images/Bibiana2.JPG">
-                   <img src="/images/Magda1.JPEG">
-                 </div>
-            </div>
-        </div>
-    </div>
+        {{ content | safe }}
 
-    </section>
-
-   
-
-   
-   
-
-    <section class="footer">
+         <section class="footer">
         <a href="index.html"><img src="/images/nk creative.png"></a>
         <p> Made with <i class="fa-regular fa-heart" style="color: #000000;"></i> by Natalie Krecmerova</p>
         <div class="icons">
